feature flèche du caroussel et addEventListener

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </header>
 <main>
 	<div id="banner">
+		<img class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="flèche précédente">
+		<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="flèche suivante">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
@@ -126,3 +128,4 @@
 <script src="./assets/script.js"></script>
 </body>
 </html>
+
